<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/character_profile_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="98dp"
                android:layout_height="98dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/profile_photo_of_character" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/char_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/character_gender" />
                <TextView
                    android:id="@+id/eye_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/character_eye_color" />

                <TextView
                    android:id="@+id/hair_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/character_hair_color" />

                <TextView
                    android:id="@+id/skin_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/character_skin_color" />

                <TextView
                    android:id="@+id/char_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/character_height" />

                <TextView
                    android:id="@+id/char_mass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/character_mass" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/character_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
            <TextView
                android:id="@+id/species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_species" />
            <TextView
                android:id="@+id/home_world"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/character_home_world" />
            <TextView
                android:id="@+id/born_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/character_birth_location" />
            <TextView
                android:id="@+id/death_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/character_death_location" />
        </LinearLayout>
    </LinearLayout>



    <ProgressBar
        android:id="@+id/profile_loading"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/empty_profile_error"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:text="@string/blank_profile_data"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>
