<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/mainLinearLayout"
    android:padding="8dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:contentDescription="@string/profile_photo_of_character"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/character_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_name" />

            <TextView
                android:id="@+id/character_species"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_species" />

            <Button
                android:id="@+id/profile_btn"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_profile" />
        </LinearLayout>
</LinearLayout>
